# tudelft-hpb-project

./: .gitignore  README.md  requirements.txt
analysis/: .gitignore  bepicolombo.ipynb  cannonball_area.ipynb  check_regression.ipynb  compare.ipynb  compare_all.ipynb  compare_regression.ipynb  earth_models.ipynb  eclipses.ipynb  event_kernels.ipynb  figures_paper.ipynb  figures_poster.ipynb  investigate_panels.ipynb  lro_ephemeris.ipynb  lro_orbit_geometry.ipynb  lro_preliminary_results.ipynb  lro_simulation.ipynb  lro_target_model.ipynb  lunar_models.ipynb  orbit_geometry.ipynb  paneling.ipynb  paneling_orekit.ipynb  requirements.txt  spice_tools.py  test.ipynb  test_albedo.ipynb  test_along.ipynb  verification_validation.ipynb
analysis/code/: plotting.py  simulation_tools.py  spice_tools.py  util.py
analysis/files/: DLAM-1.txt  albedo.tiff
lropy/: pyproject.toml  requirements.txt
lropy/lropy/: __main__.py  configurator.py  constants.py  runner.py  simulation_run.py  util.py
paper/: .gitignore  .latexmkrc  acronyms.tex  ieee-custom.bbx  main.tex  sagej.cls
paper/sections/: Models.tex  (+5 more)
planning/: .gitignore  .latexmkrc  code_design.py  main.tex  nomenclature.tex  settings.tex
poster/: .gitignore  .latexmkrc  _template.tex  beamercolorthemetudelft.sty  beamerthemegemini.sty  poster.tex
references/: Casanta2009 - Lunar Reconnaissance Orbiter Project External Systems Interface Control Document for TheLunar Reconnaissance Orbiter Ground System.pdf:Zone.Identifier  Kieffer2005 - The Spectral Irradiance of the Moon.html  Vallado2013 - Fundamentals of Astrodynamics and Applications, 4th Ed..pdf.REMOVED.git-id  bibliography.bib  protected.terms
simulations/: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  build_release.sh
simulations/cmake_modules/: AddLROExecutable.cmake  AddLROLibrary.cmake
simulations/src/: bepicolombo.cpp  lageos.cpp  lro_analysis.cpp  lro_baseline.cpp  lro_json.cpp  profile.cpp  regression_test.cpp  scratch.cpp
(+112 files in other folders)
